--- a/day4.html
+++ b/day4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 2 · 黃龍溪古鎮 · 微醺成都｜成都旅遊 2026</title>
+    <title>Day 4 · 一進九寨溝 · 童話世界｜成都旅遊 2026</title>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
     <script>window._AMapSecurityConfig = { securityJsCode: '6906803561bf037e99aa8ceb1de31bee' };</script>
@@ -18,7 +18,7 @@
         }
 
         :root {
-            --c: #10B981;
+            --c: #06B6D4;
             --navy: #1E3A5F;
             --cream: #FFF8F0;
             --card: #fff;
@@ -75,7 +75,7 @@
         .banner {
             position: relative;
             height: 180px;
-            background: url('https://images.unsplash.com/photo-1533669955142-6a73332af4db?w=800&q=80') center/cover;
+            background: url('https://images.unsplash.com/photo-1513415756790-2ac1db1297d0?w=800&q=80') center/cover;
             display: flex;
             align-items: flex-end;
             padding: 16px;
@@ -86,7 +86,7 @@
             content: '';
             position: absolute;
             inset: 0;
-            background: linear-gradient(to top, rgba(16, 185, 129, .85), rgba(16, 185, 129, .2) 60%, transparent)
+            background: linear-gradient(to top, rgba(6, 182, 212, .85), rgba(6, 182, 212, .2) 60%, transparent)
         }
 
         .banner * {
@@ -210,8 +210,8 @@
         }
 
         .tl-tag {
-            background: #D1FAE5;
-            color: #065F46;
+            background: #CFFAFE;
+            color: #155E75;
             padding: 2px 8px;
             border-radius: 10px;
             font-size: 10px;
@@ -272,6 +272,33 @@
             flex-shrink: 0
         }
 
+        /* 策略卡 */
+        .strat {
+            margin: 0 16px;
+            background: linear-gradient(135deg, #ECFDF5, #D1FAE5);
+            border: 1px solid #A7F3D0;
+            border-radius: var(--r);
+            padding: 14px
+        }
+
+        .strat h3 {
+            font-size: 14px;
+            font-weight: 800;
+            margin-bottom: 8px;
+            color: #065F46
+        }
+
+        .strat p {
+            font-size: 12px;
+            color: #065F46;
+            line-height: 1.6;
+            margin-bottom: 6px
+        }
+
+        .strat p:last-child {
+            margin-bottom: 0
+        }
+
         #map {
             width: calc(100% - 32px);
             height: 200px;
@@ -312,7 +339,7 @@
         .btn-next {
             background: var(--c);
             color: #fff;
-            box-shadow: 0 4px 12px rgba(16, 185, 129, .3)
+            box-shadow: 0 4px 12px rgba(6, 182, 212, .3)
         }
     </style>
 </head>
@@ -320,16 +347,28 @@
 <body>
     <div class="top"><a class="back" href="index.html">←</a>
         <div>
-            <div class="top-title">Day 2 · 黃龍溪古鎮</div>
-            <div class="top-sub">5月17日（週六）</div>
+            <div class="top-title">Day 4 · 一進九寨溝</div>
+            <div class="top-sub">5月19日（週一）</div>
         </div>
     </div>
     <div class="banner">
-        <div class="banner-num">02</div>
+        <div class="banner-num">04</div>
         <div class="banner-info">
-            <div class="theme">黃龍溪古鎮尋幽 🏮</div>
-            <div class="meta">5月17日（週六）· 雙流區黃龍溪 + 市區巡遊</div>
+            <div class="theme">一進九寨溝 · 童話世界 💎</div>
+            <div class="meta">5月19日（週一）· 全天景區深度遊</div>
         </div>
+    </div>
+
+    <!-- 遊覽策略 -->
+    <div class="sec-head">
+        <div class="dot" style="background:#10B981"></div>
+        <h2>🎯 遊覽策略</h2>
+    </div>
+    <div class="strat">
+        <h3>🗺️ 九寨溝「Y」字型路線攻略</h3>
+        <p>九寨溝分為3條溝：<strong>樹正溝</strong>（入口段）、<strong>日則溝</strong>（右支）、<strong>則查窪溝</strong>（左支），整體呈「Y」字型。</p>
+        <p>💡 <strong>建議策略</strong>：一早入園 → 搭觀光車直衝最高點（長海/原始森林）→ 再一路往下走棧道，邊走邊拍。這樣順光拍照效果最好，而且是下坡比較輕鬆！</p>
+        <p>🍱 景區內唯一餐廳在「諾日朗中心站」，建議也自備一些乾糧和水。</p>
     </div>
 
     <div class="sec-head">
@@ -343,10 +382,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🌅 08:30 – 09:30</div>
-                <div class="tl-title">早餐 & 出發</div>
-                <div class="tl-desc">飯店附近吃碗成都早餐（豆花、抄手、紅油水餃），然後叫滴滴或包車前往黃龍溪。車程約40-60分鐘。</div>
-                <div class="tl-tags"><span class="tl-tag">🚕 滴滴/包車</span><span class="tl-tag">~40km</span></div>
+                <div class="tl-time">🌅 07:00</div>
+                <div class="tl-title">早起入園</div>
+                <div class="tl-desc">建議7點前到達景區入口排隊。九寨溝每日限流，越早入園人越少、水面越平靜，拍出的倒影照最美！</div>
+                <div class="tl-tags"><span class="tl-tag">🎫 入園</span><span class="tl-tag">📸 黃金時段</span></div>
             </div>
         </div>
 
@@ -356,12 +395,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏮 10:00 – 14:00</div>
-                <div class="tl-title">黃龍溪古鎮</div>
-                <div class="tl-desc">2100年歷史的水鄉古鎮！漫步青石板老街，穿過古榕樹林蔭，沿溪邊水街拍照。中午品嚐「網紅一根麵」——超長一根拉麵表演超有趣！還有石磨豆花、焦皮肘子等古鎮特色小吃。
-                </div>
-                <div class="tl-tags"><span class="tl-tag">🏮 古街漫步</span><span class="tl-tag">🍜 一根麵</span><span
-                        class="tl-tag">📸 水街拍照</span></div>
+                <div class="tl-time">🚌 07:30 – 08:30</div>
+                <div class="tl-title">觀光車直達則查窪溝頂端</div>
+                <div class="tl-desc">搭環保觀光車直接上到「長海」——九寨溝海拔最高、面積最大的海子。湖水碧藍深邃，被雪山和原始森林環繞，壯觀到無法用言語形容。</div>
+                <div class="tl-tags"><span class="tl-tag">🏔️ 長海</span><span class="tl-tag">海拔3100m</span></div>
             </div>
         </div>
 
@@ -371,10 +408,11 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚕 14:30 – 16:00</div>
-                <div class="tl-title">返回成都市區</div>
-                <div class="tl-desc">逛累了、吃飽了，搭車返回市區。回飯店稍作休息，充好電再出發享受成都夜生活。</div>
-                <div class="tl-tags"><span class="tl-tag">🚕 滴滴</span></div>
+                <div class="tl-time">💎 09:00 – 10:00</div>
+                <div class="tl-title">五彩池 ✨</div>
+                <div class="tl-desc">九寨溝最小但最驚豔的海子！水色隨角度變化呈現翡翠綠、寶石藍、琥珀黃⋯⋯像一顆鑲嵌在山谷間的寶石。從長海步行下來約20分鐘就到。</div>
+                <div class="tl-tags"><span class="tl-tag">💎 五彩池</span><span class="tl-tag">📸 必拍</span><span
+                        class="tl-tag">🌈 變幻色彩</span></div>
             </div>
         </div>
 
@@ -384,12 +422,50 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍵 17:00 – 19:00</div>
-                <div class="tl-title">寬窄巷子 · 蓋碗茶</div>
-                <div class="tl-desc">成都最有名的歷史文化街區。分為「寬巷子」（懷舊閒適）、「窄巷子」（文藝精緻）、「井巷子」（時尚創意）。找家茶館坐下來，體驗成都人的慢生活——一杯蓋碗茶，一個下午。
-                </div>
-                <div class="tl-tags"><span class="tl-tag">🍵 蓋碗茶</span><span class="tl-tag">📸 歷史街區</span><span
-                        class="tl-tag">🎭 川劇</span></div>
+                <div class="tl-time">🌊 10:30 – 12:00</div>
+                <div class="tl-title">諾日朗瀑布</div>
+                <div class="tl-desc">中國最寬的鈣華瀑布！寬270米，水幕從山崖飛流直下，氣勢磅礡。是九寨溝的標誌性景觀，也是《西遊記》片尾曲的取景地。</div>
+                <div class="tl-tags"><span class="tl-tag">🌊 諾日朗瀑布</span><span class="tl-tag">📸 西遊記取景地</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time">🍱 12:00 – 13:00</div>
+                <div class="tl-title">諾日朗中心站午餐</div>
+                <div class="tl-desc">景區內唯一的用餐點。有自助餐和簡餐可選。吃飽了繼續征戰日則溝！</div>
+                <div class="tl-tags"><span class="tl-tag">🍱 午餐</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time">🌿 13:00 – 15:00</div>
+                <div class="tl-title">五花海 🌺</div>
+                <div class="tl-desc">「九寨溝的驕傲」！被譽為九寨溝最美的海子。水底的古木和藻類呈現翡翠、鵝黃、寶藍、深橙⋯多種顏色交織，像一幅上帝打翻的調色盤。站在老虎嘴觀景台俯瞰效果最佳。</div>
+                <div class="tl-tags"><span class="tl-tag">🌺 五花海</span><span class="tl-tag">📸 九寨之最</span><span
+                        class="tl-tag">🎨 調色盤湖</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time">💦 15:00 – 16:00</div>
+                <div class="tl-title">珍珠灘瀑布</div>
+                <div class="tl-desc">水流經過鈣化灘面時激起無數白色水珠，猶如珍珠四濺。瀑布寬度約162米，沿棧道步行近距離感受水霧飛濺的清涼感。</div>
+                <div class="tl-tags"><span class="tl-tag">💦 珍珠灘</span><span class="tl-tag">📸 瀑布</span></div>
             </div>
         </div>
 
@@ -398,12 +474,11 @@
                 <div class="tl-dot"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🌃 19:30 – 22:00</div>
-                <div class="tl-title">九眼橋 · 安順廊橋夜景 🌉</div>
-                <div class="tl-desc">成都最美夜景地標！安順廊橋在夜燈映照下倒映在錦江水面，金碧輝煌。九眼橋附近就是成都的酒吧一條街，可以找間氛圍好的小酒吧，吹著江風喝一杯，感受微醺成都的魅力。
-                </div>
-                <div class="tl-tags"><span class="tl-tag">🌉 廊橋夜景</span><span class="tl-tag">🍺 酒吧街</span><span
-                        class="tl-tag">🌃 微醺成都</span></div>
+                <div class="tl-time">🚶 16:00 – 17:30</div>
+                <div class="tl-title">樹正群海 → 出園</div>
+                <div class="tl-desc">沿樹正溝棧道往下走，經過樹正群海、犀牛海——一連串大小海子如珍珠般串在一起。這段路光線最好，是拍攝倒影的絕佳時刻。走到溝口出園，結束充實的一天！</div>
+                <div class="tl-tags"><span class="tl-tag">🌲 樹正群海</span><span class="tl-tag">🦏 犀牛海</span><span
+                        class="tl-tag">🚶 棧道</span></div>
             </div>
         </div>
     </div>
@@ -413,16 +488,16 @@
         <h2>🏨 今晚住宿</h2>
     </div>
     <div class="hotel-card">
-        <div class="icon">🌆</div>
+        <div class="icon">🏔️</div>
         <div>
-            <div class="name">春熙路國際金融中心亞朵酒店</div>
-            <div class="desc">📍 同Day 1（第2晚）<br>💡 明天退房前往九寨溝，記得整理行李！</div>
+            <div class="name">四季雲隱·五恆全氧民宿</div>
+            <div class="desc">📍 同Day 3（第2晚）<br>💡 早點休息，明天二進九寨溝繼續探索！</div>
         </div>
     </div>
 
     <div class="sec-head">
         <div class="dot" style="background:#3B82F6"></div>
-        <h2>🗺️ 景點地圖</h2>
+        <h2>🗺️ 景區地圖</h2>
     </div>
     <div id="map"></div>
 
@@ -431,21 +506,21 @@
         <h2>💡 今日提醒</h2>
     </div>
     <div class="tips">
-        <div class="tip"><span class="tip-ic">⚡</span><span>明天要搭高鐵前往九寨溝！今晚整理好行李，準備保暖衣物（高原溫差大）。</span></div>
-        <div class="tip"><span class="tip-ic">🎫</span><span>確認明天的高鐵票已購買（川青鐵路 成都東→黃龍九寨站），車次請提前在 12306 或 Trip.com
-                預訂。</span></div>
-        <div class="tip"><span class="tip-ic">🏮</span><span>黃龍溪古鎮免門票，但週末人多，建議早點去。</span></div>
+        <div class="tip"><span class="tip-ic">🚶</span><span>今天步行量大（約15-20km），穿舒適的登山鞋或運動鞋，帶雙備用襪子。</span></div>
+        <div class="tip"><span class="tip-ic">☀️</span><span>高原紫外線強！塗好防曬霜（SPF50+），戴帽子和太陽眼鏡。</span></div>
+        <div class="tip"><span class="tip-ic">📸</span><span>手機拍照建議開HDR模式，水面倒影效果最好。自拍桿景區不限制。</span></div>
+        <div class="tip"><span class="tip-ic">🫁</span><span>高海拔注意呼吸節奏，爬坡時慢慢來，不要憋氣拍照。感覺頭疼就休息。</span></div>
     </div>
 
-    <div class="nav-btns"><a class="btn-prev" href="day1.html">← Day 1</a><a class="btn-next" href="day3.html">Day 3 ·
-            直奔九寨 →</a></div>
+    <div class="nav-btns"><a class="btn-prev" href="day3.html">← Day 3</a><a class="btn-next" href="day5.html">Day 5 ·
+            二進九寨溝 →</a></div>
 
     <script>
         window.onload = function () {
             try {
-                var map = new AMap.Map('map', { zoom: 11, center: [104.0200, 30.5000], mapStyle: 'amap://styles/whitesmoke', resizeEnable: true });
-                [{ name: '黃龍溪古鎮', lat: 30.3184, lng: 103.9711, c: '#10B981' }, { name: '寬窄巷子', lat: 30.6726, lng: 104.0536, c: '#10B981' }, { name: '九眼橋/安順廊橋', lat: 30.6408, lng: 104.0835, c: '#10B981' }, { name: '亞朵酒店', lat: 30.6574, lng: 104.0810, c: '#0D9488' }].forEach(function (s) {
-                    var m = new AMap.CircleMarker({ center: [s.lng, s.lat], radius: 7, strokeColor: '#fff', strokeWeight: 2, fillColor: s.c, fillOpacity: .95, zIndex: 10, cursor: 'pointer' }); m.setMap(map);
+                var map = new AMap.Map('map', { zoom: 12, center: [103.92, 33.20], mapStyle: 'amap://styles/whitesmoke', resizeEnable: true });
+                [{ name: '景區入口', lat: 33.165, lng: 103.85, c: '#06B6D4' }, { name: '長海', lat: 33.07, lng: 103.93, c: '#06B6D4' }, { name: '五彩池', lat: 33.08, lng: 103.92, c: '#EC4899' }, { name: '諾日朗瀑布', lat: 33.15, lng: 103.89, c: '#06B6D4' }, { name: '五花海', lat: 33.18, lng: 103.92, c: '#F59E0B' }, { name: '珍珠灘瀑布', lat: 33.19, lng: 103.93, c: '#06B6D4' }, { name: '樹正群海', lat: 33.20, lng: 103.88, c: '#10B981' }].forEach(function (s) {
+                    var m = new AMap.CircleMarker({ center: [s.lng, s.lat], radius: 6, strokeColor: '#fff', strokeWeight: 2, fillColor: s.c, fillOpacity: .95, zIndex: 10, cursor: 'pointer' }); m.setMap(map);
                     m.on('click', function () { new AMap.InfoWindow({ content: '<div style="padding:6px 10px;font-size:13px;font-weight:700;">' + s.name + '</div>', offset: new AMap.Pixel(0, -10) }).open(map, m.getCenter()) });
                 });
             } catch (e) { document.getElementById('map').innerHTML = '<div style="height:200px;display:flex;align-items:center;justify-content:center;background:#F3F4F6;border-radius:16px;color:#6B7280;">地圖載入中...</div>' }
