--- a/day6.html
+++ b/day6.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 1 · 抵達成都 · 市區初體驗｜成都旅遊 2026</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <title>Day 6 · 黃龍鈣化池 · 返回成都｜成都旅遊 2026</title>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
     <script>window._AMapSecurityConfig = { securityJsCode: '6906803561bf037e99aa8ceb1de31bee' };</script>
     <script
-        src="https://webapi.amap.com/maps?v=2.0&key=2ff5910e40cf633abbe738e78c4e4160&plugin=AMap.Driving,AMap.Walking,AMap.InfoWindow"></script>
+        src="https://webapi.amap.com/maps?v=2.0&key=2ff5910e40cf633abbe738e78c4e4160&plugin=AMap.InfoWindow"></script>
     <style>
         * {
             box-sizing: border-box;
@@ -19,7 +18,7 @@
         }
 
         :root {
-            --amber: #F59E0B;
+            --c: #EC4899;
             --navy: #1E3A5F;
             --cream: #FFF8F0;
             --card: #fff;
@@ -37,7 +36,6 @@
             padding-bottom: 30px
         }
 
-        /* 頂部列 */
         .top {
             position: sticky;
             top: 0;
@@ -74,11 +72,10 @@
             color: var(--sub)
         }
 
-        /* 日橫幅 */
         .banner {
             position: relative;
             height: 180px;
-            background: url('https://images.unsplash.com/photo-1600111893479-a4c9e2b3d6d0?w=800&q=80') center/cover;
+            background: url('https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?w=800&q=80') center/cover;
             display: flex;
             align-items: flex-end;
             padding: 16px;
@@ -89,7 +86,7 @@
             content: '';
             position: absolute;
             inset: 0;
-            background: linear-gradient(to top, rgba(245, 158, 11, .85), rgba(245, 158, 11, .2) 60%, transparent)
+            background: linear-gradient(to top, rgba(236, 72, 153, .85), rgba(236, 72, 153, .2) 60%, transparent)
         }
 
         .banner * {
@@ -118,7 +115,6 @@
             margin-top: 4px
         }
 
-        /* 區段 */
         .sec-head {
             padding: 20px 16px 8px;
             display: flex;
@@ -138,7 +134,6 @@
             flex-shrink: 0
         }
 
-        /* 時間軸 */
         .timeline {
             padding: 0 16px
         }
@@ -166,7 +161,7 @@
             width: 12px;
             height: 12px;
             border-radius: 50%;
-            border: 3px solid var(--amber);
+            border: 3px solid var(--c);
             background: #fff;
             flex-shrink: 0;
             z-index: 1
@@ -185,12 +180,12 @@
             border-radius: 12px;
             box-shadow: var(--shadow);
             padding: 12px;
-            border-left: 3px solid var(--amber)
+            border-left: 3px solid var(--c)
         }
 
         .tl-time {
             font-size: 11px;
-            color: var(--amber);
+            color: var(--c);
             font-weight: 700;
             margin-bottom: 4px
         }
@@ -215,15 +210,40 @@
         }
 
         .tl-tag {
-            background: #FEF3C7;
-            color: #92400E;
+            background: #FCE7F3;
+            color: #9D174D;
             padding: 2px 8px;
             border-radius: 10px;
             font-size: 10px;
             font-weight: 600
         }
 
-        /* 住宿卡 */
+        .strat {
+            margin: 0 16px;
+            background: linear-gradient(135deg, #FDF2F8, #FCE7F3);
+            border: 1px solid #F9A8D4;
+            border-radius: var(--r);
+            padding: 14px
+        }
+
+        .strat h3 {
+            font-size: 14px;
+            font-weight: 800;
+            margin-bottom: 8px;
+            color: #9D174D
+        }
+
+        .strat p {
+            font-size: 12px;
+            color: #9D174D;
+            line-height: 1.6;
+            margin-bottom: 6px
+        }
+
+        .strat p:last-child {
+            margin-bottom: 0
+        }
+
         .hotel-card {
             margin: 0 16px;
             background: var(--card);
@@ -252,7 +272,6 @@
             margin-top: 2px
         }
 
-        /* 提示 */
         .tips {
             margin: 0 16px;
             background: #FFFBEB;
@@ -279,7 +298,6 @@
             flex-shrink: 0
         }
 
-        /* 地圖 */
         #map {
             width: calc(100% - 32px);
             height: 200px;
@@ -289,55 +307,70 @@
             box-shadow: var(--shadow)
         }
 
-        /* 下一天 */
-        .next-day {
-            margin: 16px;
-            text-align: center
+        .nav-btns {
+            display: flex;
+            gap: 10px;
+            padding: 16px;
+            justify-content: center
         }
 
-        .next-day a {
+        .nav-btns a {
             display: inline-flex;
             align-items: center;
-            gap: 8px;
-            background: var(--amber);
-            color: #fff;
-            padding: 12px 24px;
+            gap: 6px;
+            padding: 12px 20px;
             border-radius: 24px;
             text-decoration: none;
             font-weight: 700;
-            font-size: 14px;
-            box-shadow: 0 4px 12px rgba(245, 158, 11, .3);
+            font-size: 13px;
             transition: transform .15s
         }
 
-        .next-day a:active {
+        .nav-btns a:active {
             transform: scale(.96)
+        }
+
+        .btn-prev {
+            background: #F3F4F6;
+            color: var(--navy)
+        }
+
+        .btn-next {
+            background: var(--c);
+            color: #fff;
+            box-shadow: 0 4px 12px rgba(236, 72, 153, .3)
         }
     </style>
 </head>
 
 <body>
-    <!-- 頂部導覽 -->
-    <div class="top">
-        <a class="back" href="index.html">←</a>
+    <div class="top"><a class="back" href="index.html">←</a>
         <div>
-            <div class="top-title">Day 1 · 抵達成都</div>
-            <div class="top-sub">5月16日（週五）</div>
+            <div class="top-title">Day 6 · 黃龍景區</div>
+            <div class="top-sub">5月21日（週三）</div>
         </div>
     </div>
-
-    <!-- 日橫幅 -->
     <div class="banner">
-        <div class="banner-num">01</div>
+        <div class="banner-num">06</div>
         <div class="banner-info">
-            <div class="theme">抵達成都 · 市區初體驗 🏙️</div>
-            <div class="meta">5月16日（週五）· 春熙路 / 太古里</div>
+            <div class="theme">黃龍鈣化池 · 返回成都 🐉</div>
+            <div class="meta">5月21日（週三）· 黃龍景區 → 高鐵返蓉</div>
         </div>
     </div>
 
-    <!-- 行程時間軸 -->
     <div class="sec-head">
-        <div class="dot" style="background:var(--amber)"></div>
+        <div class="dot" style="background:#10B981"></div>
+        <h2>🎯 遊覽策略</h2>
+    </div>
+    <div class="strat">
+        <h3>🚡 黃龍攻略：索道上，步行下</h3>
+        <p>💡 <strong>強烈建議「索道（纜車）上，步行下」！</strong>搭纜車到頂後步行前往五彩池，再沿步道一路下山欣賞鈣化池地貌。</p>
+        <p>🏔️ 黃龍最高處海拔約3500m，是這趟旅程最高點。纜車上山可以節省體力、減少高山反應風險。</p>
+        <p>⏱️ 全程約3-4小時就能走完，下午有充足時間搭高鐵返回成都。</p>
+    </div>
+
+    <div class="sec-head">
+        <div class="dot" style="background:var(--c)"></div>
         <h2>📍 今日行程</h2>
     </div>
     <div class="timeline">
@@ -347,124 +380,133 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">✈️ 12:40</div>
-                <div class="tl-title">抵達天府國際機場</div>
-                <div class="tl-desc">國泰航空 CX986 經香港轉機抵達。取行李後前往地鐵站。</div>
-                <div class="tl-tags"><span class="tl-tag">✈️ 航班抵達</span><span class="tl-tag">T2航廈</span></div>
+                <div class="tl-time">🚗 07:00 – 07:40</div>
+                <div class="tl-title">川主寺 → 黃龍景區</div>
+                <div class="tl-desc">民宿老闆安排車子送你們到黃龍景區，車程約40分鐘。早起空氣清新，沿途高原風光太美了。</div>
+                <div class="tl-tags"><span class="tl-tag">🚗 民宿接送</span><span class="tl-tag">⏱ ~40min</span></div>
             </div>
         </div>
+
         <div class="tl-item">
             <div class="tl-line">
                 <div class="tl-dot"></div>
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚇 13:00 – 15:30</div>
-                <div class="tl-title">搭乘地鐵 18 號線至市區</div>
-                <div class="tl-desc">天府機場 → 地鐵18號線 → 轉乘至春熙路站。車程約1.5~2小時，票價約10元人民幣。</div>
-                <div class="tl-tags"><span class="tl-tag">🚇 地鐵</span><span class="tl-tag">18號線</span></div>
+                <div class="tl-time">🚡 08:00 – 08:30</div>
+                <div class="tl-title">索道纜車上山</div>
+                <div class="tl-desc">搭乘纜車直達山頂區域，約8分鐘。纜車裡可以俯瞰整個黃龍溝谷和遠處的雪寶頂雪山，起霧前上去很重要！</div>
+                <div class="tl-tags"><span class="tl-tag">🚡 纜車</span><span class="tl-tag">🏔️ 海拔3470m</span></div>
             </div>
         </div>
+
         <div class="tl-item">
             <div class="tl-line">
                 <div class="tl-dot"></div>
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 16:00</div>
-                <div class="tl-title">飯店 Check-in</div>
-                <div class="tl-desc">春熙路國際金融中心亞朵酒店。放下行李，整理一下，準備出發探索！</div>
-                <div class="tl-tags"><span class="tl-tag">🏨 入住</span><span class="tl-tag">春熙路商圈</span></div>
+                <div class="tl-time">💛 08:30 – 10:00</div>
+                <div class="tl-title">五彩池 ✨ 黃龍之冠</div>
+                <div class="tl-desc">
+                    從纜車站步行約30分鐘到達黃龍最頂端的「五彩池」——693個鈣華彩池錯落在雪山腳下，水面呈現翡翠綠、孔雀藍、琥珀黃⋯⋯如同人間瑤池。這是黃龍最精華的景點，一定要多拍幾張！</div>
+                <div class="tl-tags"><span class="tl-tag">💛 五彩池</span><span class="tl-tag">📸 必拍</span><span
+                        class="tl-tag">🏔️ 人間瑤池</span></div>
             </div>
         </div>
+
         <div class="tl-item">
             <div class="tl-line">
                 <div class="tl-dot"></div>
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">📸 16:30 – 17:30</div>
-                <div class="tl-title">IFS 國際金融中心「爬牆熊貓」</div>
-                <div class="tl-desc">成都最紅打卡地標！7樓露台有巨型攀爬大熊貓雕塑，從不同角度拍照效果超好。頂層還能俯瞰整座春熙路商圈。</div>
-                <div class="tl-tags"><span class="tl-tag">📸 必拍打卡</span><span class="tl-tag">🐼 地標</span></div>
+                <div class="tl-time">🚶 10:00 – 12:00</div>
+                <div class="tl-title">步行下山 · 飛瀑流輝 · 迎賓池</div>
+                <div class="tl-desc">
+                    沿木棧道一路下山，經過「爭豔池」、「飛瀑流輝」、「洗身洞」、「盆景池」⋯⋯到最下方的「迎賓池」。整條溝谷3.6公里佈滿金黃色鈣華地貌，像一條金色巨龍盤踞在山間，壯觀無比。</div>
+                <div class="tl-tags"><span class="tl-tag">🐉 金色鈣華</span><span class="tl-tag">💦 飛瀑流輝</span><span
+                        class="tl-tag">🚶 下坡輕鬆</span></div>
             </div>
         </div>
+
         <div class="tl-item">
             <div class="tl-line">
                 <div class="tl-dot"></div>
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 17:30 – 19:00</div>
-                <div class="tl-title">漫步太古里</div>
-                <div class="tl-desc">成都最時尚的開放式商業街區，中西融合建築風格。旁邊就是千年古寺「大慈寺」，古今交融超有氛圍感。</div>
-                <div class="tl-tags"><span class="tl-tag">🛍️ 購物</span><span class="tl-tag">⛩️ 大慈寺</span><span
-                        class="tl-tag">📸 拍照</span></div>
+                <div class="tl-time">🚗 12:30 – 13:30</div>
+                <div class="tl-title">前往黃龍九寨高鐵站</div>
+                <div class="tl-desc">遊覽完畢，聯繫民宿使用免費高鐵接送服務前往「黃龍九寨站」。或在景區門口找拼車。</div>
+                <div class="tl-tags"><span class="tl-tag">🚗 接送</span><span class="tl-tag">📞 提前聯繫</span></div>
             </div>
         </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time">🚄 14:00 – 16:00</div>
+                <div class="tl-title">高鐵返回成都東站</div>
+                <div class="tl-desc">搭乘川青高鐵返回成都東站，車程約1.5-2小時。在車上好好休息，回顧這幾天拍的美照！</div>
+                <div class="tl-tags"><span class="tl-tag">🚄 川青高鐵</span><span class="tl-tag">⏱ ~2hr</span></div>
+            </div>
+        </div>
+
         <div class="tl-item">
             <div class="tl-line">
                 <div class="tl-dot"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍲 19:00 – 21:00</div>
-                <div class="tl-title">道地四川麻辣火鍋 🌶️</div>
-                <div class="tl-desc">來成都第一件事——吃火鍋！推薦「小龍坎」或「蜀大俠」。建議點鴛鴦鍋（辣鍋+清湯鍋），必點毛肚、鵝腸、黃喉。也可以試試「串串香」，一根一根串著涮，更有成都街頭感。
-                </div>
-                <div class="tl-tags"><span class="tl-tag">🌶️ 火鍋</span><span class="tl-tag">🍢 串串香</span><span
-                        class="tl-tag">🔥 必吃</span></div>
+                <div class="tl-time">🏨 17:00 – 21:00</div>
+                <div class="tl-title">入住新飯店 · 擔擔麵晚餐</div>
+                <div class="tl-desc">抵達成都，前往春熙商圈的「凱特麗亞創意主題飯店公寓」辦理入住。晚上在附近吃碗道地的擔擔麵或鍾水餃，享受回到低海拔的舒適感！</div>
+                <div class="tl-tags"><span class="tl-tag">🏨 新飯店</span><span class="tl-tag">🍜 擔擔麵</span><span
+                        class="tl-tag">🥟 鍾水餃</span></div>
             </div>
         </div>
     </div>
 
-    <!-- 住宿資訊 -->
     <div class="sec-head">
         <div class="dot" style="background:#0D9488"></div>
         <h2>🏨 今晚住宿</h2>
     </div>
     <div class="hotel-card">
-        <div class="icon">🌆</div>
+        <div class="icon">🎨</div>
         <div>
-            <div class="name">春熙路國際金融中心亞朵酒店</div>
-            <div class="desc">📍 春熙路/太古里商圈核心位置<br>🛏️ 第 1 晚（共住 2 晚）<br>💡 出門即太古里、IFS，逛街吃火鍋超方便</div>
+            <div class="name">凱特麗亞創意主題飯店公寓（春熙太古里店）</div>
+            <div class="desc">📍 回到春熙太古里商圈<br>🛏️ 第 1 晚（共住 2 晚）<br>💡 機能便利，吃喝玩樂一步到位</div>
         </div>
     </div>
 
-    <!-- 地圖 -->
     <div class="sec-head">
         <div class="dot" style="background:#3B82F6"></div>
-        <h2>🗺️ 景點地圖</h2>
+        <h2>🗺️ 路線地圖</h2>
     </div>
     <div id="map"></div>
 
-    <!-- 提示 -->
     <div class="sec-head">
         <div class="dot" style="background:#F87171"></div>
         <h2>💡 今日提醒</h2>
     </div>
     <div class="tips">
-        <div class="tip"><span class="tip-ic">📱</span><span>抵達後先買中國 SIM 卡或開通漫遊，下載支付寶/微信支付（大陸幾乎不用現金）。</span></div>
-        <div class="tip"><span class="tip-ic">🚇</span><span>地鐵18號線可直達市區，但高峰期需25分鐘一班，建議備好離線地圖。</span></div>
-        <div class="tip"><span class="tip-ic">🌶️</span><span>火鍋如果怕辣，一定要點鴛鴦鍋！「微辣」在四川已經是很辣了。</span></div>
-        <div class="tip"><span class="tip-ic">💰</span><span>建議備帶少量人民幣現金（約500元），部分地鐵售票機和小攤需要現金。</span></div>
+        <div class="tip"><span class="tip-ic">🏔️</span><span>黃龍海拔3500m！放慢腳步，不要跑步或大口喘氣。帶好氧氣罐（景區門口可買）。</span></div>
+        <div class="tip"><span class="tip-ic">📞</span><span>記得提前2小時打電話給民宿確認高鐵站接送時間和地點。</span></div>
+        <div class="tip"><span class="tip-ic">🎫</span><span>高鐵票記得提前買好！下午的班次很搶手。</span></div>
     </div>
 
-    <!-- 下一天 -->
-    <div class="next-day"><a href="day2.html">Day 2 · 黃龍溪古鎮 →</a></div>
+    <div class="nav-btns"><a class="btn-prev" href="day5.html">← Day 5</a><a class="btn-next" href="day7.html">Day 7 ·
+            熊貓谷&都江堰 →</a></div>
 
     <script>
         window.onload = function () {
             try {
-                var map = new AMap.Map('map', { zoom: 14, center: [104.0810, 30.6560], mapStyle: 'amap://styles/whitesmoke', resizeEnable: true });
-                var spots = [
-                    { name: '天府國際機場', lat: 30.3135, lng: 104.4451, c: '#F59E0B' },
-                    { name: 'IFS 爬牆熊貓', lat: 30.6558, lng: 104.0793, c: '#F59E0B' },
-                    { name: '太古里', lat: 30.6547, lng: 104.0820, c: '#F59E0B' },
-                    { name: '亞朵酒店(春熙路)', lat: 30.6574, lng: 104.0810, c: '#0D9488' },
-                ];
-                spots.forEach(function (s) {
-                    var m = new AMap.CircleMarker({ center: [s.lng, s.lat], radius: 7, strokeColor: '#fff', strokeWeight: 2, fillColor: s.c, fillOpacity: .95, zIndex: 10, cursor: 'pointer' });
-                    m.setMap(map);
+                var map = new AMap.Map('map', { zoom: 7, center: [103.9, 31.8], mapStyle: 'amap://styles/whitesmoke', resizeEnable: true });
+                [{ name: '黃龍景區', lat: 32.73, lng: 103.83, c: '#EC4899' }, { name: '川主寺', lat: 32.75, lng: 103.57, c: '#8B5CF6' }, { name: '黃龍九寨站', lat: 32.75, lng: 103.57, c: '#3B82F6' }, { name: '成都東站', lat: 30.62, lng: 104.16, c: '#3B82F6' }, { name: '凱特麗亞飯店', lat: 30.655, lng: 104.08, c: '#0D9488' }].forEach(function (s) {
+                    var m = new AMap.CircleMarker({ center: [s.lng, s.lat], radius: 7, strokeColor: '#fff', strokeWeight: 2, fillColor: s.c, fillOpacity: .95, zIndex: 10, cursor: 'pointer' }); m.setMap(map);
                     m.on('click', function () { new AMap.InfoWindow({ content: '<div style="padding:6px 10px;font-size:13px;font-weight:700;">' + s.name + '</div>', offset: new AMap.Pixel(0, -10) }).open(map, m.getCenter()) });
                 });
             } catch (e) { document.getElementById('map').innerHTML = '<div style="height:200px;display:flex;align-items:center;justify-content:center;background:#F3F4F6;border-radius:16px;color:#6B7280;">地圖載入中...</div>' }
